# VoxPop

./: pyproject.toml
template/: index.html
template/comments/: index.html  new.html
voxpop_daoolet/: main.py  repo.py
