[tool.poetry]
name = "voxpop-daoolet"
version = "0.1.0"
description = ""
authors = ["daoolet <dauletkhabidullin@gmail.com>"]
readme = "README.md"
packages = [{include = "voxpop_daoolet"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.99.1"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
